--- a/views/userView/checkout.ejs
+++ b/views/userView/checkout.ejs
@@ -221,7 +221,7 @@
                       <%= product.productId.productName %>
                       <span
                         >&#8377;<%=
-                        product.productId.actualPrice*product.quantity %></span
+                        (product.productId.actualPrice-product.productId.offerAmound)*product.quantity %></span
                       >
                     </li>
 
