--- a/views/adminView/editCategory.ejs
+++ b/views/adminView/editCategory.ejs
@@ -72,8 +72,8 @@
       data-sidebar-position="fixed"
       data-header-position="fixed"
     >
-     <!-- Sidebar Start -->
-     <aside class="left-sidebar">
+    <!-- Sidebar Start -->
+    <aside class="left-sidebar">
       <!-- Sidebar scroll-->
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
@@ -148,6 +148,16 @@
             </li>
 
             <li class="sidebar-item">
+              <a class="sidebar-link" href="/admin/offers" aria-expanded="false">
+                <span>
+                  <i class="fas fa-tags"></i>
+
+                </span>
+                <span class="hide-menu">Offers</span>
+              </a>
+            </li>
+
+            <li class="sidebar-item">
               <a class="sidebar-link" href="/admin/logout" aria-expanded="false">
                 <span>
                   <i class="fa-solid fa-right-from-bracket"></i>
@@ -166,6 +176,8 @@
         <!-- End Sidebar navigation -->
       </div>
       <!-- End Sidebar scroll-->
+    </aside>
+    <!--  Sidebar End -->
     </aside>
     
     <!--  Sidebar End -->
