--- a/views/userView/productdetails.ejs
+++ b/views/userView/productdetails.ejs
@@ -240,9 +240,16 @@
                                         <i class="fa fa-star-o"></i>
                                         <span> - 5 Reviews</span>
                                     </div>
-                                    <h3>
-                                        ₹<%=product.actualPrice %>
-                                    </h3>
+                                    <% if(product.offerAmound > 0 ){ %>
+                                        <%   let price =product.actualPrice-product.offerAmound %>
+                                          
+                                          <h5 style="text-decoration: line-through; color: red;"><%= '₹' + product.actualPrice %></h5>
+                                          <h5><%= '₹' + price.toFixed(2) %></h5>
+                                          <p style="color: red;"><%= product.offerName %></p>
+
+                                      <% }else{ %>
+                                      <h5><%= '₹' + product.actualPrice.toFixed(2) %></h5>
+                                      <% } %>
                                     <p>
                                         <%=product.description %>
                                     </p>
