--- a/views/userView/cart.ejs
+++ b/views/userView/cart.ejs
@@ -269,14 +269,8 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="cart__discount">
-              <h6>Discount codes</h6>
-              <form action="#">
-                <input type="text" placeholder="Coupon code" />
-                <button type="submit">Apply</button>
-              </form>
-            </div>
+          <div class="col-lg-4 mt-5">
+            
             <div class="cart__total">
               <h6>Cart total</h6>
               <ul>
