--- a/views/adminView/Dashboard.ejs
+++ b/views/adminView/Dashboard.ejs
@@ -127,6 +127,16 @@
             </li>
 
             <li class="sidebar-item">
+              <a class="sidebar-link" href="/admin/coupons" aria-expanded="false">
+                <span>
+                  <i class="fa-solid fa-receipt"></i>
+
+                </span>
+                <span class="hide-menu">Coupons</span>
+              </a>
+            </li>
+
+            <li class="sidebar-item">
               <a class="sidebar-link" href="/admin/logout" aria-expanded="false">
                 <span>
                   <i class="fa-solid fa-right-from-bracket"></i>
