--- a/views/adminView/category.ejs
+++ b/views/adminView/category.ejs
@@ -61,6 +61,14 @@
        .msg{
         color: re;
        }
+       .divCoupon {
+            border: 1px solid #ccc;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #e1dede;
+            margin: 10px 0;
+        }
       </style>
   </head>
 
@@ -274,19 +282,20 @@
               <h2>Category Table</h2>
       
               <div class="table-responsive">
+                <input id="off" type="hidden" value="<%= offers %>">
                 <table class="table table-striped table-bordered text-center">
-                  <thead class="table-warning">
+                  <thead class="table-dark">
                     <tr>
                       <th class="text-center">Category Name</th>
                       <th class="text-center">Action</th>
                     </tr>
                   </thead>
                   <tbody>
-<% if(locals.message){%>
-  <div class="msg">
-  <%= message %>
-  </div>
-   <% } %>
+                    <% if(locals.message){%>
+                        <div class="msg">
+                        <%= message %>
+                         </div>
+                           <% } %>
                     
                     <% if (categories.length > 0) { %>
                       <% for (let i = 0; i < categories.length; i++) { %>
@@ -299,6 +308,14 @@
                             <a href="/admin/edit?id=<%= categories[i]._id %>" class="text-white">
                             <button  type="button" class="btn actionbtn btn-info  ml-2" >EDIT</button>
                           </a>
+
+                          <% if(categories[i].offerPercentage > 0) { %>
+                            <button class="btn btn-dark"  id="<%= categories[i]._id %>" ><%= categories[i].offerName %></button>
+                            <button class="btn btn-warning" onclick="removeOfferCategory('<%= categories[i]._id %>')">Remove</button>
+                          <% }else { %>
+                          <button class="btn btn-dark"  id="<%= categories[i]._id %>"  onclick="addOfferToCategory('<%= categories[i]._id %>')">Add Offer</button>
+                         <% } %>
+                          
                           </td>
                         </tr>
                       <% } %>
@@ -337,6 +354,99 @@
 
 
       <script>
+        function removeOfferCategory(categoryId){
+          
+          fetch('/admin/removeOfferCategory',{
+          method:'post',
+          headers:{
+            'Content-Type': 'application/json',
+          },
+          body:JSON.stringify({categoryId})
+          })
+          .then(response=>{
+            return response.json()
+          })
+          .then(data =>{
+            if(data.value===1){
+              Swal.fire({
+              position: "center",
+               icon: "success",
+               title: "Offer Removed",
+               showConfirmButton: false,
+               timer: 1500
+                 });
+
+                 setTimeout(() => {
+                  window.location.reload()
+                 }, 1600);
+                
+
+            }
+          })
+
+        }
+
+
+
+      function addOfferToCategory(categoryId){
+        const offers = document.getElementById('off').value
+         // Create Swal alert with offer list
+     Swal.fire({
+                        title: "<u><strong> Offers</strong></u>",
+                        html: `
+                    
+                    <% offers.forEach(offer => { %>
+                        <div class="divCoupon"> 
+                            <p> Offer Name:&nbsp;<strong><%= offer.offerName %></strong></p>
+                            <p>Discount Offer:&nbsp; <strong><%= offer.discount %>%</strong></p>
+                            <button class="btn btn-success offerbtn" onclick="applyoffer('<%= offer._id %>', '<%= offer.discount %>','${categoryId}' )">Apply</button>
+                        </div>
+                    <% }); %> `,
+                        showCloseButton: true,
+                        showCancelButton: false,
+                        focusConfirm: false,
+                        confirmButtonText: `Done !`,
+                    });
+
+      }
+
+      function applyoffer(offerId,discount,categoryId){
+        
+        fetch('/admin/applyOfferToCategory',{
+          method:'post',
+          headers:{
+            'Content-Type': 'application/json',
+          },
+          body:JSON.stringify({offerId,categoryId})
+        })
+        .then(response =>{
+          return response.json()
+        })
+        .then(data =>{
+          if(data.value==1){
+
+            document.getElementById(categoryId).innerText='XXXXX'
+
+            Swal.fire({
+              position: "center",
+               icon: "success",
+               title: "Offer Applyied",
+               showConfirmButton: false,
+               timer: 1500
+                 });
+
+                 setTimeout(() => {
+                  window.location.reload()
+                 }, 1600);
+
+          }
+        })
+
+
+      }
+
+
+
 
          function addCategory(){
             const newCategory = document.getElementById('textInput').value.trim()
